--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <side-menu></side-menu>
-    <div ui-view=""></div>
+    <div ui-view="" class="main"></div>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
